--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,11 +30,6 @@ ol {
   padding: 120px 70px 0 70px;
 }
 
-::-moz-selection {
-  background-color: #000;
-  color: #fff;
-}
-
 ::selection {
   background-color: #000;
   color: #fff;
@@ -194,8 +189,7 @@ ol {
   width: 82px;
   height: 82px;
   border: 1px solid #ccc;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .basket-sidebar .basket-products .basket-product .basket-product-content {
   display: flex;
@@ -278,6 +272,10 @@ ol {
   z-index: 10;
   transition: 0.4s ease-in;
 }
+.add-to-fav-button.active {
+  fill: white;
+  background-color: black;
+}
 
 .add-to-fav-button:hover {
   fill: white;
@@ -353,7 +351,7 @@ ol {
   padding: 0 70px;
 }
 #footer .content {
-  padding: 20px 130px;
+  padding: 20px 50px;
 }
 #footer .content .content-bottom {
   justify-content: space-between;
@@ -422,24 +420,10 @@ ol {
   border: none;
   border-bottom: 2px solid #000;
 }
-#footer .middle-footer .footer-form .form-email .send-email::-moz-placeholder {
-  font-weight: 700;
-  font-size: 13px;
-  color: #ccc;
-  -moz-transition: 0.4s;
-  transition: 0.4s;
-}
 #footer .middle-footer .footer-form .form-email .send-email::placeholder {
   font-weight: 700;
   font-size: 13px;
   color: #ccc;
-  transition: 0.4s;
-}
-#footer .middle-footer .footer-form .form-email .send-email:focus::-moz-placeholder {
-  color: #000;
-  font-weight: 700;
-  font-size: 13px;
-  -moz-transition: 0.4s;
   transition: 0.4s;
 }
 #footer .middle-footer .footer-form .form-email .send-email:focus::placeholder {
@@ -524,8 +508,7 @@ ol {
   font-size: clamp(2.5rem, 4vw, 4.9rem);
   max-width: 90%;
   transition: all 0.5s;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 #header .swiper-slide .slider-title .slider-heading .char {
   transform: translateY(210px);
@@ -538,10 +521,8 @@ ol {
 #header .swiper-slide img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
+  object-fit: cover;
+  object-position: top;
 }
 #header .autoplay-progress {
   position: absolute;
@@ -586,7 +567,6 @@ ol {
   }
   #header .swiper-slide .slider-title .slider-heading {
     color: #fff;
-    font-size: 50px;
   }
   #header .swiper-slide .slider-title .custom-button {
     border-color: #fff;
@@ -627,8 +607,7 @@ ol {
   padding-left: 17px;
 }
 #nav .navbar-container .leftside-nav .logo img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 #nav .navbar-container .middle-nav {
   display: flex;
@@ -857,10 +836,8 @@ ol {
   min-height: 100%;
 }
 .mobile-header-top .mobile-nav-container .dark-logo img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+  object-fit: cover;
+  object-position: center;
 }
 .mobile-header-top .mobile-nav-container .mobile-nav-actions {
   height: 72px;
@@ -1006,25 +983,15 @@ ol {
   transform: scaleY(1);
 }
 
-@media screen and (max-width: 480px) {
-  #featured .featured-container .row .product-card .product-card-details {
-    max-width: 100%;
-    max-height: 100%;
-    top: 0;
-    left: 0;
-  }
-}
 #featured-products {
   padding: 80px 70px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 #featured-products .featured-products-content h2 {
   padding-bottom: 20px;
 }
 #featured-products .featured-products-filter {
   display: flex;
+  justify-content: center;
   gap: 32px;
   margin-bottom: 35px;
 }
@@ -1049,7 +1016,6 @@ ol {
 #featured-products .featured-products-container .featured-products-card {
   position: relative;
   box-sizing: border-box;
-  max-width: 350px;
   max-height: 600px;
   border: 1px solid #cacaca;
   outline: 1px solid transparent;
@@ -1094,9 +1060,8 @@ ol {
 }
 #featured-products .featured-products-container .featured-products-card .swiper-slide img {
   display: block;
-  max-width: 260px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  max-width: 240px;
+  object-fit: cover;
 }
 #featured-products .featured-products-container .featured-products-card .product-card-content {
   display: flex;
@@ -1123,13 +1088,17 @@ ol {
 #product-video {
   background-image: url("https://dunker.qodeinteractive.com/wp-content/uploads/2022/12/h1-video-img-1.jpg");
   background-size: cover;
+  background-position: center;
   min-height: 500px;
+  position: relative;
+  top: 0;
+  bottom: 0;
 }
 #product-video a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 500px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 #product-video a svg {
   background: #000;
@@ -1251,38 +1220,6 @@ ol {
   font-size: 14px;
 }
 
-@media only screen and (max-width: 992px) {
-  #categories .categories-container {
-    padding: 0 70px;
-  }
-  #categories .categories-container .categories-content {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
-  #categories .categories-container .categories-content .category-item {
-    display: inline-flex;
-    border-bottom: 1px solid #ccc;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-  }
-  #categories .categories-container .categories-content .category-item .category-title {
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 44px;
-    position: relative;
-    white-space: nowrap;
-  }
-  #categories .categories-container .categories-content .category-item .category-title .category-count {
-    position: absolute;
-    top: 0px;
-    right: -10px;
-    color: #727272;
-    font-size: 14px;
-  }
-}
 #banner {
   padding-top: 60px;
 }
@@ -1327,30 +1264,6 @@ ol {
   padding: 35px 0;
 }
 
-@media only screen and (max-width: 992px) {
-  #banner .banner-new .new-title {
-    font-size: 10rem;
-    text-align: center;
-  }
-  #banner .sale-title {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 100%;
-    width: 100%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-  #banner .banner-sale .sale-text {
-    display: block;
-    width: 100%;
-    height: 25%;
-    font-size: 8rem;
-  }
-  #banner .banner-sale .discount {
-    padding: 20px 0px 40px 0px;
-  }
-}
 #trending {
   padding: 0 70px;
 }
@@ -1404,8 +1317,7 @@ ol {
 #trending .featured-products-container .featured-products-card .swiper-slide img {
   display: block;
   width: auto;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 #trending .featured-products-container .featured-products-card .product-card-content {
   display: flex;
@@ -1496,13 +1408,6 @@ ol {
   display: inline-block;
 }
 
-@media only screen and (max-width: 768px) {
-  #street-vibe .street-title {
-    text-align: left;
-    margin-right: auto;
-    margin-left: 10px;
-  }
-}
 #elementor-section {
   border-collapse: collapse;
   display: flex;
@@ -1520,6 +1425,78 @@ ol {
   border: 1px solid black;
 }
 
+@media screen and (max-width: 480px) {
+  #featured .featured-container .row .product-card .product-card-details {
+    max-width: 100%;
+    max-height: 100%;
+    top: 0;
+    left: 0;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #product-video {
+    min-height: 250px;
+  }
+  #street-vibe .street-title {
+    text-align: left;
+    margin-right: auto;
+    margin-left: 10px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  #banner .banner-new .new-title {
+    font-size: 10rem;
+    text-align: center;
+  }
+  #banner .sale-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 100%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  #banner .banner-sale .sale-text {
+    display: block;
+    width: 100%;
+    height: 25%;
+    font-size: 8rem;
+  }
+  #banner .banner-sale .discount {
+    padding: 20px 0px 40px 0px;
+  }
+  #categories .categories-container {
+    padding: 0 70px;
+  }
+  #categories .categories-container .categories-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  #categories .categories-container .categories-content .category-item {
+    display: inline-flex;
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  #categories .categories-container .categories-content .category-item .category-title {
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 44px;
+    position: relative;
+    white-space: nowrap;
+  }
+  #categories .categories-container .categories-content .category-item .category-title .category-count {
+    position: absolute;
+    top: 0px;
+    right: -10px;
+    color: #727272;
+    font-size: 14px;
+  }
+}
 #detail-product {
   padding: 70px 50px 30px 50px;
 }
@@ -1533,8 +1510,7 @@ ol {
 #detail-product .image-gallery .zoom-img img {
   transition: all 0.3s;
   overflow: hidden;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: auto;
 }
@@ -1554,8 +1530,7 @@ ol {
 #detail-product .image-gallery .gallery-items .gallery-item img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   display: block;
 }
 #detail-product .product-content .product-heading h1 {
@@ -1613,22 +1588,18 @@ ol {
 }
 #detail-product .zoomist-container {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 #detail-product .zoomist-image {
   width: 100%;
   aspect-ratio: 1;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 #detail-product .zoomist-image img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+  object-fit: cover;
+  object-position: center;
 }
 #detail-product .product-description .product-description-header {
   height: 85px;
@@ -1736,8 +1707,7 @@ ol {
 #related-products .featured-products-container .featured-products-card .swiper-slide img {
   display: block;
   max-width: 260px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 #related-products .featured-products-container .featured-products-card .product-card-content {
   display: flex;
@@ -1769,71 +1739,91 @@ ol {
     font-size: 20px;
   }
 }
-#whishlist {
+#wishlist {
   margin: 0 60px;
 }
-#whishlist .wish-list-nav {
-  height: 70px;
-  display: flex;
-  align-items: center;
+#wishlist .product-wishlist {
+  padding: 40px 0 0px;
 }
-#whishlist .product-wishlist {
-  padding: 60px 0 120px;
-}
-#whishlist .product-wishlist h2 {
+#wishlist .product-wishlist h2 {
   font-size: 60px;
-  font-family: "Yantramanav", sans-serif;
   text-transform: uppercase;
   font-weight: 800;
-  padding-bottom: 60px;
+  padding-bottom: 40px;
 }
-#whishlist .product-wishlist .added-products {
-  border-top: 1px solid #e7e7e7;
-  border-bottom: 1px solid #e7e7e7;
-  padding: 20px;
+#wishlist .wishlist-items {
+  padding: 70px 0;
 }
-#whishlist .product-wishlist .added-products p {
-  text-transform: uppercase;
-  margin: 0;
+#wishlist .wishlist-items .wishlist-item {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  padding: 20px 0;
+}
+#wishlist .wishlist-items .wishlist-item .left-side-wishlist {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+#wishlist .wishlist-items .wishlist-item .left-side-wishlist button {
+  border: none;
+  background: none;
+  outline: none;
+  font-size: 22px;
+}
+#wishlist .wishlist-items .wishlist-item .left-side-wishlist .wishlist-img {
+  margin: 0 10px;
+  object-fit: cover;
+  border: 1px solid #ccc;
+}
+#wishlist .wishlist-items .wishlist-item .left-side-wishlist .wishlist-img img {
+  max-width: 80px;
+  height: auto;
+}
+#wishlist .wishlist-items .wishlist-item .left-side-wishlist .wishlist-info a {
+  display: block;
+  font-size: clamp(16px, 1vw, 20px);
+  font-weight: 700;
+  max-width: 100%;
+}
+#wishlist .wishlist-items .wishlist-item .left-side-wishlist .wishlist-info span {
   font-size: 14px;
-  font-family: "Yantramanav", sans-serif;
-  font-weight: 600;
+  color: #727272;
 }
-#whishlist .product-wishlist .added-products .wish-list-element {
-  padding: 10px 0;
-  border: 1px solid #d9d9d9;
+#wishlist .wishlist-items .wishlist-item .right-side-wishlist {
   display: flex;
   align-items: center;
+  gap: 25px;
 }
-#whishlist .product-wishlist .added-products .wish-list-element .remove-element {
-  display: flex;
-  align-items: center;
-  padding: 0 20px;
+#wishlist .wishlist-items .wishlist-item .right-side-wishlist .product-price span {
+  font-size: 29px;
+  color: #242424;
+  font-weight: 700;
 }
-#whishlist .product-wishlist .added-products .wish-list-element .img-element {
-  width: 84px;
-  height: 84px;
-  border: 1px solid #d9d9d9;
-  display: flex;
-  justify-content: center;
+#wishlist .wishlist-items .wishlist-item .right-side-wishlist .product-stock-status {
+  color: #727272;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
 }
-#whishlist .product-wishlist .added-products .wish-list-element .img-element img {
-  height: 100%;
-}
-#whishlist .product-wishlist .added-products .wish-list-element .element-details {
-  display: flex;
-}
-#whishlist .product-wishlist .added-products .wish-list-element .price-and-stock {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
-#whishlist .product-wishlist .added-products .wish-list-element .price-and-stock span {
-  padding: 0 10px;
+#wishlist .wishlist-items .wishlist-item .right-side-wishlist .custom-button {
+  margin-left: 45px;
 }
 
-@media screen and (min-width: 800px) {
-  #whishlist .product-wishlist .wish-list-element {
+@media only screen and (max-width: 768px) {
+  #wishlist .wishlist-items .wishlist-item {
     flex-direction: column;
+  }
+  #wishlist .wishlist-items .wishlist-item .left-side-wishlist {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #wishlist .wishlist-items .wishlist-item .right-side-wishlist {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #wishlist .wishlist-items .wishlist-item .right-side-wishlist .custom-button {
+    margin-left: 0px;
   }
 }/*# sourceMappingURL=main.css.map */
