--- a/assets/scss/pages/_wishlist.scss
+++ b/assets/scss/pages/_wishlist.scss
@@ -1,73 +1,103 @@
-#whishlist{
+//Wishlist Section Start
+#wishlist {
+  margin: 0 60px;
+  .product-wishlist {
+    padding: 40px 0 0px;
+    h2 {
+      font-size: 60px;
+      text-transform: uppercase;
+      font-weight: 800;
+      padding-bottom: 40px;
+    }
+  }
 
-    margin: 0 60px;
-    .wish-list-nav{
-        height: 70px;
+  .wishlist-items {
+    padding: 70px 0;
+    .wishlist-item {
+      display: flex;
+      justify-content: space-between;
+      border-top: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+      padding: 20px 0;
+      .left-side-wishlist {
         display: flex;
         align-items: center;
+        gap: 25px;
+        button {
+          border: none;
+          background: none;
+          outline: none;
+          font-size: 22px;
+        }
+        .wishlist-img {
+          margin: 0 10px;
+          object-fit: cover;
+          border: 1px solid #ccc;
+          img {
+            max-width: 80px;
+            height: auto;
+          }
+        }
+        .wishlist-info {
+          a {
+            display: block;
+            font-size: clamp(16px, 1vw, 20px);
+            font-weight: 700;
+            max-width: 100%;
+          }
+          span {
+            font-size: 14px;
+            color: #727272;
+          }
+        }
+      }
+      .right-side-wishlist {
+        display: flex;
+        align-items: center;
+        gap: 25px;
+
+        .product-price {
+          span {
+            font-size: 29px;
+            color: #242424;
+            font-weight: 700;
+          }
+        }
+
+        .product-stock-status {
+          color: #727272;
+          text-transform: uppercase;
+          font-size: 12px;
+          font-weight: 700;
+        }
+
+        .custom-button {
+          margin-left: 45px;
+        }
+      }
     }
-    .product-wishlist{
-        padding: 60px 0 120px;
-        h2{
-            font-size: 60px;
-            font-family: 'Yantramanav', sans-serif;
-            text-transform: uppercase;
-            font-weight: 800;
-            padding-bottom: 60px;
-        }
-        .added-products{
-            border-top: 1px solid #e7e7e7;
-            border-bottom: 1px solid #e7e7e7;
-            padding: 20px;
-            p{
-                text-transform: uppercase;
-                margin: 0;
-                font-size: 14px;
-                font-family: 'Yantramanav', sans-serif;
-                font-weight: 600;
-            }
-            .wish-list-element{
-                padding: 10px 0;
-                border: 1px solid #d9d9d9;
-                display: flex;
-                align-items: center;
-                .remove-element{
-                    display: flex;
-                    align-items: center;
-                    padding: 0 20px;
-                }
-                .img-element{
-                    width: 84px;
-                    height: 84px;
-                    border: 1px solid #d9d9d9;
-                    display: flex;
-                    justify-content: center;
-                    img{
-                        height: 100%;
-                    }
-                }
-                .element-details{
-                    display: flex;
-                }
-                .price-and-stock{
-                    display: flex;
-                    align-items: center;
-                    margin-left: auto;
-                    span{
-                        padding: 0 10px;
-                    }
-                }
-            }
-        }
-    }}
+  }
+}
+//Wishlist Section End
 
-
-    @media screen and (min-width: 800px) {
-    #whishlist{
-
-        .product-wishlist{
-            .wish-list-element{
-                flex-direction: column;
-            }
+@media only screen and (max-width: 768px) {
+  #wishlist {
+    .wishlist-items {
+      .wishlist-item {
+        flex-direction: column;
+        .left-side-wishlist {
+          flex-direction: column;
+          align-items: flex-start;
         }
-    }}
+
+        .right-side-wishlist {
+          flex-direction: column;
+          align-items: flex-start;
+          .custom-button {
+            margin-left: 0px;
+          }
+        }
+      }
+    }
+  }
+}
